# tomato-rubato

./: .gitignore  .travis.yml  README.md  tomato-rubato.cabal
src/: Demonstrate.hs
src/Sound/: Tomato.hs
src/Sound/Tomato/: Mix.hs  Synthesis.hs  Theory.hs
src/Sound/Tomato/Internal/: SuperCollider.hs
src/examples/: Keyboard.hs
tomato-rubato/: tomato-rubato.cabal
tomato-rubato-openal/: CHANGELOG.md  haddocks.html  tomato-rubato-openal.cabal
tomato-rubato-openal/src/Sound/Tomato/: Speakers.hs
tomato-rubato-openal/src/examples/: Sine.hs
tomato-rubato/src/: .gitignore
tomato-rubato/src/Sound/: Tomato.hs
tomato-rubato/src/Sound/Tomato/: MIDI.hs  Mix.hs  Music.hs  Orchestra.hs  Reactive.hs  Sound.hs  Synthesis.hs  Theory.hs  Types.hs
tomato-rubato/src/Sound/Tomato/Internal/: SuperCollider.hs
tomato-rubato/src/examples/: Examples.hs  Formants.hs  Instruments.hs  Keyboard.hs  Sounds.hs
